syntax = "proto3";

package rivet.backend.pkg.identity_config.version_publish;

import "legacy/proto/common.proto";
import "legacy/proto/backend/identity.proto";

message Request {
	rivet.common.Uuid version_id = 1;
	rivet.backend.identity.VersionConfig config = 2;
	rivet.backend.identity.VersionConfigCtx config_ctx = 3;
}

message Response {

}
